# cpu-emulator

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: address_bus.c.AF1ABC4F1AC6C902.idx  address_bus.h.A1B8C1FD45BC5F0B.idx  cpu.c.1F78C5D26B2E5B10.idx  cpu.h.6ABAC2D345243363.idx  debug.h.17AFC4C13D23A632.idx  main.c.FC6580152FBBAEAC.idx  reserved_idt_entries.h.530147D3C3CA7956.idx  types.h.879292BE856A4631.idx
include/: address_bus.h  command_args.h  config_file_parse.h  debug.h  memory.h  port_bus.h  types.h
include/cpu/: cpu.h
src/: address_bus.c  command_args.c  config_file_parse.c  cpu.c  cpu.h  instructions.h  main.c  memory.c  port_bus.c  reserved_idt_entries.h
